Update several pages

--- a/docker.html
+++ b/docker.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 12:41 -->
+<!-- 2019-12-07 Sat 18:08 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Docker - Seorenn Static Pages</title>
@@ -151,6 +151,19 @@ docker volume <span style="color: #ECBE7B;">rm</span> $<span style="color: #51af
 </div>
 </div>
 </div>
+<div id="outline-container-orga951448" class="outline-3">
+<h3 id="orga951448">적당히 시작하기 좋은 이미지들</h3>
+<div class="outline-text-3" id="text-orga951448">
+<ul class="org-ul">
+<li><code>debian:buster</code> 일단 이 글을 쓰는 시점에서 가장 최신의 LTS 데비안
+이미지&#x2026;인지는 잘 모르겠지만 하여간 그나마 패키지가 최신입니다.</li>
+<li><code>python:3.x-slim</code> Python 3.x 버전대의 작은 이미지입니다. 빌드를 하려면 추가
+패키지 설치가 필요하지만 apt-get이 있으므로 안심😋</li>
+<li><code>alpine</code> 그냥 썰렁한 리눅스입니다. apt도 없어요. 매우 작은 이미지를 만들거라면
+베이스 이미지로 적당할지도 모릅니다.</li>
+</ul>
+</div>
+</div>
 </div>
 <div id="outline-container-org62b2a93" class="outline-2">
 <h2 id="org62b2a93">관련글</h2>
@@ -162,6 +175,6 @@ docker volume <span style="color: #ECBE7B;">rm</span> $<span style="color: #51af
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 07일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
