--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-04 Wed 22:18 -->
+<!-- 2019-12-07 Sat 18:48 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Frontpage - Seorenn Static Pages</title>
@@ -91,16 +91,25 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org7d1dc35" class="outline-3">
-<h3 id="org7d1dc35">도구들</h3>
-<div class="outline-text-3" id="text-org7d1dc35">
+<div id="outline-container-org0685d45" class="outline-3">
+<h3 id="org0685d45">개발용 도구들</h3>
+<div class="outline-text-3" id="text-org0685d45">
 <ul class="org-ul">
-<li><a href="tmux.html">Tmux</a></li>
 <li><a href="git.html">Git</a></li>
 <li><a href="docker.html">Docker</a></li>
 <li><a href="kubectl.html">kubectl</a></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org1bed2a7" class="outline-3">
+<h3 id="org1bed2a7">기타 도구들</h3>
+<div class="outline-text-3" id="text-org1bed2a7">
+<ul class="org-ul">
+<li><a href="tmux.html">Tmux</a></li>
 <li><a href="homebrew.html">Homebrew</a></li>
 <li><a href="iconv.html">iconv</a></li>
+<li><a href="find.html">find</a></li>
+<li><a href="caffeinate.html">caffeinate</a></li>
 </ul>
 </div>
 </div>
@@ -138,6 +147,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 04일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 07일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
