--- a/server-stack-links.html
+++ b/server-stack-links.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 01:43 -->
+<!-- 2019-12-07 Sat 14:14 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>서버 스택 관련 링크 모음 - Seorenn Static Pages</title>
@@ -41,7 +41,14 @@ gtag('config', 'UA-44534026-1');
 <h2 id="org7404e79">쿠버네티스(Kubernetes, k8s)</h2>
 <div class="outline-text-2" id="text-org7404e79">
 <ul class="org-ul">
-<li><a target="_blank" href="https://www.magalix.com/blog/kubernetes-patterns-the-stateful-service-pattern">Kubernetes Patterns : The Stateful Service Pattern</a></li>
+<li><a target="_blank" href="https://www.magalix.com/blog/kubernetes-patterns-the-stateful-service-pattern">Kubernetes
+Patterns : The Stateful Service Pattern</a>:
+k8s 스테이트풀 서비스 패턴</li>
+<li><a target="_blank" href="https://learnk8s.io/troubleshooting-deployments">A visual guide on
+troubleshooting Kubernetes deployments</a>: 디플로이먼트가 실패한다면 이런
+플로우를 따라가보며 체크해봅시다.</li>
+<li><a target="_blank" href="https://kubernetes.io/ko/docs/reference/kubectl/cheatsheet/">kubectl 치트
+시트</a>: kubectl 도구 사용 예를 한 페이지에 거하게(?) 몰아 넣었습니다.</li>
 </ul>
 </div>
 </div>
@@ -53,6 +60,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 07일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
