--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-05 Thu 00:01 -->
+<!-- 2019-12-07 Sat 23:15 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sitemap - Seorenn Static Pages</title>
@@ -70,11 +70,14 @@ gtag('config', 'UA-44534026-1');
 <li><a href="spacemacs.html">Spacemacs</a></li>
 <li><a href="swift.html">Swift</a></li>
 <li><a href="swift-5-1.html">Swift 5.1</a></li>
+<li><a href="swift-tips.html">Swift Tips</a></li>
 <li><a href="swiftui-in-playground.html">SwiftUI in Playground</a></li>
 <li><a href="swiftui-macos-components.html">SwiftUI macOS Components</a></li>
 <li><a href="swiftui-tips.html">SwiftUI 팁 모음</a></li>
 <li><a href="tmux.html">Tmux</a></li>
 <li><a href="vim.html">Vim</a></li>
+<li><a href="caffeinate.html">caffeinate</a></li>
+<li><a href="find.html">find</a></li>
 <li><a href="iconv.html">iconv</a></li>
 <li><a href="kubectl.html">kubectl</a></li>
 <li><a href="macos.html">macOS</a></li>
@@ -88,6 +91,6 @@ gtag('config', 'UA-44534026-1');
 <li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
 <li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 </ul>
-<div id="footer"><div id="time">2019년 12월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 07일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
