--- a/swift.html
+++ b/swift.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 12:41 -->
+<!-- 2019-12-07 Sat 23:15 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Swift - Seorenn Static Pages</title>
@@ -37,7 +37,22 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Swift</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header><p>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><nav id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#orgbb7ee11">소개</a></li>
+<li><a href="#org176b2b1">관련글</a></li>
+<li><a href="#org92211d1">버전들</a></li>
+<li><a href="#org41b8b4d">기타 링크들</a></li>
+</ul>
+</div>
+</nav>
+
+<div id="outline-container-orgbb7ee11" class="outline-2">
+<h2 id="orgbb7ee11">소개</h2>
+<div class="outline-text-2" id="text-orgbb7ee11">
+<p>
 Swift(스위프트)는 애플 주도로 개발된 프로그래밍 언어로 정적
 타이핑(Static Typing)을 특징으로 하는 바이너리 컴파일이 가능한 언어입니다.
 </p>
@@ -69,11 +84,13 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 다만 아직까지는 애플 플랫폼 외에서의 활약은 크게 눈에 띄지는 않는 편이기도
 합니다. 따라서 애플 제품 앱을 개발하려는 용도 외에는 아직 추천하기 좀 힘든 편입니다.
 </p>
-
+</div>
+</div>
 <div id="outline-container-org176b2b1" class="outline-2">
 <h2 id="org176b2b1">관련글</h2>
 <div class="outline-text-2" id="text-org176b2b1">
 <ul class="org-ul">
+<li><a href="swift-tips.html">Swift Tips</a></li>
 <li><a href="./combine-framework.html">Combine Framework</a></li>
 <li><a href="./swiftui-tips.html">SwiftUI 팁 모음</a></li>
 <li><a href="./swiftui-macos-components.html">SwiftUI macOS Components</a></li>
@@ -102,6 +119,6 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 07일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
