--- a/vim.html
+++ b/vim.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-04 Wed 18:57 -->
+<!-- 2019-12-06 Fri 12:01 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Vim - Seorenn Static Pages</title>
@@ -124,11 +124,11 @@ vi 혹은 Vim의 종료 방법은 보통 아래처럼 설명합니다.
 <div id="outline-container-org2de3d4c" class="outline-3">
 <h3 id="org2de3d4c">Undo/Redo</h3>
 <div class="outline-text-3" id="text-org2de3d4c">
-<p>
-<code>u</code> Undo (소문자 u 주의)
-<code>U</code> Undo current line (현재 라인의 Undo, 대문자 U 주의)
-<code>^R</code> Redo (Ctrl+R)
-</p>
+<ul class="org-ul">
+<li><code>u</code> Undo (소문자 u 주의)</li>
+<li><code>U</code> Undo current line (현재 라인의 Undo, 대문자 U 주의)</li>
+<li><code>^R</code> Redo (Ctrl+R)</li>
+</ul>
 </div>
 </div>
 <div id="outline-container-orgf2c1841" class="outline-3">
@@ -183,6 +183,6 @@ vi 혹은 Vim의 종료 방법은 보통 아래처럼 설명합니다.
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 04일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
