--- a/web-dev-links.html
+++ b/web-dev-links.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-02 Mon 16:36 -->
+<!-- 2019-12-07 Sat 13:39 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>웹 개발 관련 링크 모음 - Seorenn Static Pages</title>
@@ -90,6 +90,8 @@ gtag('config', 'UA-44534026-1');
 <li><a target="_blank" href="https://dev.to/adrianbdesigns/you-can-create-these-elements-without-javascript-525a">You can create these elements without JavaScript</a></li>
 <li><a target="_blank" href="https://dev.to/hankchizljaw/a-modern-css-reset-6p3">A Modern CSS Reset</a></li>
 <li><a target="_blank" href="https://www.purgecss.com">Purgecss</a>: 쓰지 않는 CSS를 삭제하는데 도움을 주는 도구</li>
+<li><a target="_blank" href="https://brumm.af/shadows">Make a smooth shadow, friend</a>: 여러 레이어를
+활용한 부드러운 그림자 CSS 코드를 만들어주는 도구 웹페이지</li>
 </ul>
 </div>
 </div>
@@ -116,6 +118,6 @@ ES6(일부), ES7(일부) 지원.</li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 02일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 07일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
