Remove timestamp from sitemap.html

--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-07 Sat 23:48 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sitemap - Seorenn Static Pages</title>
@@ -91,6 +90,6 @@ gtag('config', 'UA-44534026-1');
 <li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
 <li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 </ul>
-<div id="footer"><div id="time">2019년 12월 07일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time"></div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
