Update several pages

--- a/apple-dev-links.html
+++ b/apple-dev-links.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 01:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음 - Seorenn Static Pages</title>
@@ -55,6 +54,15 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
+<div id="outline-container-org6dcf02c" class="outline-2">
+<h2 id="org6dcf02c">플랫폼 공통</h2>
+<div class="outline-text-2" id="text-org6dcf02c">
+<ul class="org-ul">
+<li><a target="_blank" href="https://www.swiftbysundell.com/articles/predicates-in-swift/">Predicates in
+Swift</a>: <code>NSPredicate</code> 가이드 글</li>
+</ul>
+</div>
+</div>
 <div id="outline-container-orgc5107d5" class="outline-2">
 <h2 id="orgc5107d5">Appstore</h2>
 <div class="outline-text-2" id="text-orgc5107d5">
@@ -64,6 +72,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
