--- a/non-dev-links.html
+++ b/non-dev-links.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-02 Mon 17:08 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>비개발 관련 정보 링크 모음 - Seorenn Static Pages</title>
@@ -48,6 +47,15 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 02일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="outline-container-org7a44b3f" class="outline-2">
+<h2 id="org7a44b3f">기타</h2>
+<div class="outline-text-2" id="text-org7a44b3f">
+<ul class="org-ul">
+<li><a target="_blank" href="https://neal.fun/deep-sea/">The Deep Sea</a>: 정말로 깊은 바다와 거기서 사는
+생물들을 알아갈 수 있는 사이트</li>
+</ul>
+</div>
+</div>
+<div id="footer"><div id="time">2019년 12월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
