--- a/sitemap.html
+++ b/sitemap.html
@@ -70,6 +70,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="swift.html">Swift</a></li>
 <li><a href="swift-5-1.html">Swift 5.1</a></li>
 <li><a href="swift-tips.html">Swift Tips</a></li>
+<li><a href="swiftui.html">SwiftUI</a></li>
 <li><a href="swiftui-in-playground.html">SwiftUI in Playground</a></li>
 <li><a href="swiftui-macos-components.html">SwiftUI macOS Components</a></li>
 <li><a href="swiftui-tips.html">SwiftUI 팁 모음</a></li>
