--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="lisp.html">Lisp</a></li>
 <li><a href="javascript.html">Javascript</a></li>
 <li><a href="css.html">Cascading Style Sheets</a></li>
+<li><a href="sh.html">sh</a></li>
 </ul>
 </div>
 </div>
@@ -146,6 +147,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 08일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
