--- a/sitemap.html
+++ b/sitemap.html
@@ -83,6 +83,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="macos.html">macOS</a></li>
 <li><a href="apple-dev-links.html">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</a></li>
 <li><a href="org-publish-sapzil.html">org-publish 삽질기</a></li>
+<li><a href="sh.html">sh</a></li>
 <li><a href="etc-dev-links.html">기타 개발 관련 링크 모음</a></li>
 <li><a href="etc-resource-links.html">기타 리소스 링크 모음</a></li>
 <li><a href="service_links.html">눈에 띄는 서비스 링크 모음</a></li>
