Update several pages

--- a/emacs.html
+++ b/emacs.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-04 Wed 16:27 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Emacs - Seorenn Static Pages</title>
@@ -37,7 +36,24 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Emacs</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header><p>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><nav id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#orgd7d8e11">메모</a>
+<ul>
+<li><a href="#orgcdf1a7b">How to debug freezing?</a></li>
+<li><a href="#org944b6da">Truecolor in Terminal</a></li>
+<li><a href="#orge39c690">Truecolor in Tmux</a></li>
+<li><a href="#org32a3b3b">CRLF to LF</a></li>
+<li><a href="#org5d126b0">Run Emacs Lisp Script from Shell</a></li>
+</ul>
+</li>
+<li><a href="#org0b9881a">관련글</a></li>
+</ul>
+</div>
+</nav>
+<p>
 이맥스(Emacs)는 커스터마이징이 가능한 유명한 에디터 중 하나입니다.
 이름의 유래는 Editor MACroS 의 약자로 에디터 매크로 모음이라고 해석할 수 있습니다.
 실제로 이맥스 자체는 C 로 구현된 Emacs Core 엔진과 이를 이용해 만들어진 수 많은
@@ -327,6 +343,6 @@ screen-24bits|screen with 24-bit direct color mode,
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 04일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2019년 12월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
