--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-04 Wed 18:30 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 단축키 - Seorenn Static Pages</title>
@@ -37,12 +36,53 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Doom Emacs 단축키</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header><p>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><nav id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#orgeedd0e2">이 페이지는</a></li>
+<li><a href="#org05f22da">공통(Common)</a>
+<ul>
+<li><a href="#org25f30f3">설정(Configuration) 관련</a></li>
+<li><a href="#org9a4d19e">파일(File) 관련</a></li>
+<li><a href="#org637a1bd">버퍼(Buffer) 관련</a></li>
+<li><a href="#orgbffce5b">프로젝트(Project)</a></li>
+<li><a href="#org95842c3">창(Window)</a></li>
+<li><a href="#orgac8c652">폴딩(Folding)</a></li>
+<li><a href="#org74e41cb">쉘(Shell) 혹은 터미널(Terminal)</a></li>
+<li><a href="#org2719819">템플릿(Snippets)</a></li>
+<li><a href="#orgd9bb23f">검색(Search)</a></li>
+</ul>
+</li>
+<li><a href="#org48b8f5b">고급 편집</a>
+<ul>
+<li><a href="#org5dbd544">점프(Jump)</a></li>
+<li><a href="#orge43a268">멀티커서(Multiple Cursors) - evil-multiedit</a></li>
+<li><a href="#org83baeee">멀티커서(Multiple Cursors) - evil-mc</a></li>
+<li><a href="#org2abb10b">특수 텍스트 변환</a></li>
+</ul>
+</li>
+<li><a href="#orgad68b59">특수</a>
+<ul>
+<li><a href="#org4f43e2f">Emacs Lisp 관련</a></li>
+<li><a href="#org1d34bfc">프로그래밍 관련</a></li>
+</ul>
+</li>
+<li><a href="#orga5ed969">관련글</a></li>
+</ul>
+</div>
+</nav>
+
+<div id="outline-container-orgeedd0e2" class="outline-2">
+<h2 id="orgeedd0e2">이 페이지는</h2>
+<div class="outline-text-2" id="text-orgeedd0e2">
+<p>
 실제로 사용하면서 유용하다 싶은 <a href="doom-emacs.html">Doom Emacs</a> 단축키를
 정리합니다. 모든 단축키는 <code>SPC ?</code> 키로 직접 확인해봅시다.
 또한 <a href="vim.html">Vim</a> 단축키를 잘 알아두는 것도 도움이 되니 해당 항목도 참고합시다.
 </p>
-
+</div>
+</div>
 <div id="outline-container-org05f22da" class="outline-2">
 <h2 id="org05f22da">공통(Common)</h2>
 <div class="outline-text-2" id="text-org05f22da">
@@ -102,14 +142,14 @@ gtag('config', 'UA-44534026-1');
 <div id="outline-container-orgac8c652" class="outline-3">
 <h3 id="orgac8c652">폴딩(Folding)</h3>
 <div class="outline-text-3" id="text-orgac8c652">
-<p>
-<code>z f</code> 선택영역 접기(폴딩)
-<code>z a</code> 폴딩 토글하기
-<code>z d</code> 폴딩 제거하기(코드는 당연히 삭제 안됨)
-<code>z E</code> 모든 폴딩 제거
-<code>z j</code> 다음 폴딩으로 이동
-<code>z k</code> 이전 폴딩으로 이동
-</p>
+<ul class="org-ul">
+<li><code>z f</code> 선택영역 접기(폴딩)</li>
+<li><code>z a</code> 폴딩 토글하기</li>
+<li><code>z d</code> 폴딩 제거하기(코드는 당연히 삭제 안됨)</li>
+<li><code>z E</code> 모든 폴딩 제거</li>
+<li><code>z j</code> 다음 폴딩으로 이동</li>
+<li><code>z k</code> 이전 폴딩으로 이동</li>
+</ul>
 </div>
 </div>
 <div id="outline-container-org74e41cb" class="outline-3">
@@ -222,12 +262,9 @@ gtag('config', 'UA-44534026-1');
 <li><code>SPC c d</code> 레퍼런스로 이동(Look up reference)</li>
 <li><code>=</code> 선택영역 들여쓰기(indentation) 정리</li>
 </ul>
-
-<hr>
 </div>
 </div>
 </div>
-
 <div id="outline-container-orga5ed969" class="outline-2">
 <h2 id="orga5ed969">관련글</h2>
 <div class="outline-text-2" id="text-orga5ed969">
@@ -249,6 +286,6 @@ Vi에서 쓰는 커서 이동키의 방향과 동일합니다.</p></div></div>
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 04일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2019년 12월 10일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
