--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="lisp.html">Lisp</a></li>
 <li><a href="javascript.html">Javascript</a></li>
 <li><a href="css.html">Cascading Style Sheets</a></li>
-<li><a href="sh.html">sh</a></li>
+<li><a href="sh.html">Bourne Shell</a></li>
 </ul>
 </div>
 </div>
@@ -139,6 +139,11 @@ gtag('config', 'UA-44534026-1');
 <div id="outline-container-org32930d9" class="outline-3">
 <h3 id="org32930d9">기타</h3>
 <div class="outline-text-3" id="text-org32930d9">
+<ul class="org-ul">
+<li><a href="english.html">영어 노트</a></li>
+<li><a href="italian.html">이탈리아어 노트</a></li>
+</ul>
+
 <p>
 사이트의 모든 글 링크는 <a href="sitemap.html">사이트맵</a>에서 볼 수 있습니다. 다만 일부
 링크가 걸리지 않은 페이지는 '폐기처분(?) 되었지만 404를 피하기 위해 그냥 남겨둔
@@ -147,6 +152,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 10일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
