--- a/magit.html
+++ b/magit.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-02 Mon 14:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Magit - Seorenn Static Pages</title>
@@ -37,7 +36,28 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Magit</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header><blockquote>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><nav id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#org4b8f18f">소개</a></li>
+<li><a href="#org6d68c26">magit-status</a></li>
+<li><a href="#org67e0c00">Stage</a></li>
+<li><a href="#org108f0e6">Commit</a></li>
+<li><a href="#orgfacdb8e">Log</a></li>
+<li><a href="#orgd6fcd08">Push</a></li>
+<li><a href="#orgf352b2d">Pull</a></li>
+<li><a href="#org58accb9">Branch</a></li>
+<li><a href="#orgb3f5ba1">기타</a></li>
+<li><a href="#org4223d1d">관련글</a></li>
+</ul>
+</div>
+</nav>
+
+<div id="outline-container-org4b8f18f" class="outline-2">
+<h2 id="org4b8f18f">소개</h2>
+<div class="outline-text-2" id="text-org4b8f18f">
+<blockquote>
 <p>
 It's Magit! A Git Porcelain inside Emacs
 </p>
@@ -53,7 +73,8 @@ Emacs의 킬러 소프트웨어 중 하나로 꼽을 정도로 막강합니다.
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리합니다.
 </p>
-
+</div>
+</div>
 <div id="outline-container-org6d68c26" class="outline-2">
 <h2 id="org6d68c26">magit-status</h2>
 <div class="outline-text-2" id="text-org6d68c26">
@@ -151,11 +172,8 @@ Doom Emacs 에서는 <code>SPC g g =, Spacemacs 에서는 =SPC g s</code> 단축
 <ul class="org-ul">
 <li><a href="doom-emacs.html">Doom Emacs</a>에서 <code>SPC g s</code><sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup> 로 현재 파일의 변화내용을 스테이지할 수 있습니다.</li>
 </ul>
-
-<hr>
 </div>
 </div>
-
 <div id="outline-container-org4223d1d" class="outline-2">
 <h2 id="org4223d1d">관련글</h2>
 <div class="outline-text-2" id="text-org4223d1d">
@@ -178,6 +196,6 @@ status 단축키</p></div></div>
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 02일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2019년 12월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
