--- a/org-publish.html
+++ b/org-publish.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 12:41 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Org Publish - Seorenn Static Pages</title>
@@ -37,7 +36,25 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Org Publish</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header><p>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><nav id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#orgc42f465">소개</a></li>
+<li><a href="#org67c7e04">시작하기</a></li>
+<li><a href="#orgedc7a7c">필요한 모듈들</a></li>
+<li><a href="#org8bd53b5">기본 설정</a></li>
+<li><a href="#orgff73e18">Publish 해보기</a></li>
+<li><a href="#org49d9724">프로젝트 그룹화하기</a></li>
+<li><a href="#org3836745">관련글</a></li>
+</ul>
+</div>
+</nav>
+
+<div id="outline-container-orgc42f465" class="outline-2">
+<h2 id="orgc42f465">소개</h2>
+<div class="outline-text-2" id="text-orgc42f465">
+<p>
 org-publish는 <a href="emacs.html">Emacs</a>에서 <a href="org-mode.html">Org Mode</a>로 작성된 .org 문서들로 정적 웹사이트를 만들 수 있게
 해주는 도구입니다. 쉽게 말해서 특정 디렉토리 안의 .org 파일들을 .html 파일로
 익스포트 해서 원하는 디렉토리로 복사해줍니다. 그리고 각종 css나 스크립트, 이미지
@@ -47,7 +64,8 @@ org-publish는 <a href="emacs.html">Emacs</a>에서 <a href="org-mode.html">Org 
 <p>
 org-publish 를 어떻게 설정하고 사용하는지 살펴봅시다.
 </p>
-
+</div>
+</div>
 <div id="outline-container-org67c7e04" class="outline-2">
 <h2 id="org67c7e04">시작하기</h2>
 <div class="outline-text-2" id="text-org67c7e04">
@@ -266,11 +284,8 @@ org-publish는 다행히도 별도로 설치할 필요가 없는 확장입니다
 이유는 아직 모르겠습니다.
 </p>
 </blockquote>
-
-<hr>
 </div>
 </div>
-
 <div id="outline-container-org3836745" class="outline-2">
 <h2 id="org3836745">관련글</h2>
 <div class="outline-text-2" id="text-org3836745">
@@ -283,6 +298,6 @@ org-publish는 다행히도 별도로 설치할 필요가 없는 확장입니다
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
