Update for Org Spreadsheet

--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -40,7 +40,7 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgeedd0e2">이 페이지는</a></li>
+<li><a href="#org9833444">Doom Emacs 단축키</a></li>
 <li><a href="#org05f22da">공통(Common)</a>
 <ul>
 <li><a href="#org25f30f3">설정(Configuration) 관련</a></li>
@@ -68,14 +68,20 @@ gtag('config', 'UA-44534026-1');
 <li><a href="#org1d34bfc">프로그래밍 관련</a></li>
 </ul>
 </li>
+<li><a href="#org807879b">Org Mode</a>
+<ul>
+<li><a href="#orgf3f00bb">Org 공통</a></li>
+<li><a href="#orga38317c">테이블 스프레드쉬트</a></li>
+</ul>
+</li>
 <li><a href="#orga5ed969">관련글</a></li>
 </ul>
 </div>
 </nav>
 
-<div id="outline-container-orgeedd0e2" class="outline-2">
-<h2 id="orgeedd0e2">이 페이지는</h2>
-<div class="outline-text-2" id="text-orgeedd0e2">
+<div id="outline-container-org9833444" class="outline-2">
+<h2 id="org9833444">Doom Emacs 단축키</h2>
+<div class="outline-text-2" id="text-org9833444">
 <p>
 실제로 사용하면서 유용하다 싶은 <a href="doom-emacs.html">Doom Emacs</a> 단축키를
 정리합니다. 모든 단축키는 <code>SPC ?</code> 키로 직접 확인해봅시다.
@@ -265,12 +271,37 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
+<div id="outline-container-org807879b" class="outline-2">
+<h2 id="org807879b">Org Mode</h2>
+<div class="outline-text-2" id="text-org807879b">
+</div>
+<div id="outline-container-orgf3f00bb" class="outline-3">
+<h3 id="orgf3f00bb">Org 공통</h3>
+<div class="outline-text-3" id="text-orgf3f00bb">
+<ul class="org-ul">
+<li><code>SPC m t</code> TODO</li>
+<li><code>SPC m p</code> 우선순위(priority)</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-orga38317c" class="outline-3">
+<h3 id="orga38317c">테이블 스프레드쉬트</h3>
+<div class="outline-text-3" id="text-orga38317c">
+<ul class="org-ul">
+<li><code>SPC m b h</code> 테이블에서 커서 위치의 필드 정보 <code>org-table-field-info</code></li>
+<li><code>C-c }</code> 테이블 필드 정보 오버레이 토글 <code>org-table-toggle-coordinate-overlays</code></li>
+</ul>
+</div>
+</div>
+</div>
 <div id="outline-container-orga5ed969" class="outline-2">
 <h2 id="orga5ed969">관련글</h2>
 <div class="outline-text-2" id="text-orga5ed969">
 <ul class="org-ul">
 <li><a href="doom-emacs.html">Doom Emacs</a></li>
+<li><a href="emacs.html">Emacs</a></li>
 <li><a href="vim.html">Vim</a></li>
+<li><a href="org-mode.html">Org Mode</a></li>
 </ul>
 </div>
 </div>
@@ -286,6 +317,6 @@ Vi에서 쓰는 커서 이동키의 방향과 동일합니다.</p></div></div>
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 10일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2019년 12월 11일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
